--- a/styles/style.css
+++ b/styles/style.css
@@ -91,6 +91,82 @@ hr{
  /*---------
   lates-course
   ------------ */
+  .courses{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-column-gap: 23px
+  }
+  .course{
+    box-shadow: 20px 20px 50px grey;
+    border-radius: 5px;
+    
+
+  }
  .lates-course{
     margin-left: 30px;
+ }
+ .course img{
+    width: 224px;
+    height: 104px;
+    border-radius: 5px;
+ }
+ .course-title{
+    font-size: 20px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+ }
+ .course-author{
+    
+    margin-top: 0px;
+    margin-bottom: 0px;
+
+ }
+ .course-author a{
+    text-decoration: none;
+    font-size:14.69px;
+    color: #ED6B4F;
+ }
+ .fa-star.rating{
+    color: #FFC014;
+    font-size: 12px;
+ }
+ .fa-star.empty{
+    color:#AEAEAE;
+    font-size: 12px;
+ }
+ .course-info{
+    display: flex;
+    align-items: center;
+ }
+ .course-rating{
+    font-size: 14.6913px;
+    color: #A2A2A2;
+    margin-left: 10px;
+    margin-right: 25px
+ }
+ .course-duration{
+    font-size: 14.6913px;
+    color: #FF4A60;
+ }
+
+ /* responsibe */
+ /* mobile */
+ @media only screen and (max-width:763px) {
+    .containar{
+        width: 100%;
+    }
+    .section-title{
+        text-align: center;
+    }
+    .players, .blogs, .courses{
+        grid-template-columns: repeat(1,1fr);
+    
+    }
+    .player, .blogs, .courses{
+        flex-direction: column;
+    }
+    .blog{
+        flex-direction: column;
+    }
+    
  }
