--- a/styles/style.css
+++ b/styles/style.css
@@ -167,6 +167,12 @@ hr{
     }
     .blog{
         flex-direction: column;
+        align-items: center;
+           }
+    .blog-title, .author{
+       text-align: center;
+    }
+           
     }
     
- }
+ 
