--- a/styles/style.css
+++ b/styles/style.css
@@ -99,7 +99,7 @@ hr{
   .course{
     box-shadow: 20px 20px 50px grey;
     border-radius: 5px;
-    
+    margin-right: 36px;
 
   }
  .lates-course{
