--- a/styles/style.css
+++ b/styles/style.css
@@ -177,7 +177,8 @@ hr{
        text-align: center;
     }
     .course-info{
-      margin-left: 28px;
+      display: flex;
+      justify-content: center;
     }
            
     }
